<resources>
    <string name="app_name" translatable="false">Orgs</string>
    <string name="activity_product_form_name_hint">Name</string>
    <string name="activity_product_form_descr_hint">Description</string>
    <string name="activity_product_form_price_hint">Value</string>
    <string name="activity_product_form_save_button">Save</string>
    <string name="activity_products_list_fab_content_descr">Add product</string>
    <string name="product_item_image_descr">Product image illustration</string>
    <string name="activity_products_list_fab_text">New product</string>
    <string name="product_name_placeholder" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="dialog_form_image_load_button">Download</string>
    <string name="dialog_form_image_load_url_hint">image URL</string>
    <string name="image_to_load">Image to load</string>
    <string name="dialog_delete_product_message">Are you sure you want to delete this product?</string>
    <string name="dialog_delete_product_title">Delete</string>
    <string name="dialog_delete_product_positive">Delete</string>
    <string name="dialog_delete_product_negative">Cancel</string>
    <string name="activity_product_form_new_title">New Product</string>
    <string name="activity_product_form_edit_title">Edit Product</string>
    <string name="menu_edit_title">Edit</string>
    <string name="menu_delete_title">Delete</string>
    <string name="menu_sort_name">Name</string>
    <string name="menu_sort_description">Description</string>
    <string name="menu_sort_price">Price</string>
    <string name="menu_sort_default">Default</string>
    <string name="return_button_description">Return</string>
    <string name="menu_sort_main">Sort</string>
</resources>