<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/products_sort_main"
        android:title="@string/menu_sort_main"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_sort"
        >
        <menu>
            <item
                android:id="@+id/products_sort_name_ascending"
                android:title="@string/menu_sort_name"
                app:showAsAction="never"
                android:icon="@drawable/ic_sort_ascending"
            />
            <item
                android:id="@+id/products_sort_name_descending"
                android:title="@string/menu_sort_name"
                app:showAsAction="withText"
                android:icon="@drawable/ic_sort_descending"
                />
            <item
                android:id="@+id/products_sort_description_ascending"
                android:title="@string/menu_sort_description"
                app:showAsAction="never"
                android:icon="@drawable/ic_sort_ascending"
            />
            <item
                android:id="@+id/products_sort_description_descending"
                android:title="@string/menu_sort_description"
                app:showAsAction="never"
                android:icon="@drawable/ic_sort_descending"
                />
            <item
                android:id="@+id/products_sort_price_ascending"
                android:title="@string/menu_sort_price"
                app:showAsAction="never"
                android:icon="@drawable/ic_sort_ascending"
                />
            <item
                android:id="@+id/products_sort_price_descending"
                android:title="@string/menu_sort_price"
                app:showAsAction="never"
                android:icon="@drawable/ic_sort_descending"
            />
            <item
                android:id="@+id/products_sort_default"
                android:title="@string/menu_sort_default"
                app:showAsAction="never"
                android:icon="@drawable/ic_sort_default"
                />
        </menu>

    </item>
</menu>