<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Theme.Orgs.View.Dialog"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/dialog_form_image_download"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_to_load"
            android:background="@color/ic_image_add_background"
            android:src="@drawable/ic_image_add_foreground"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_form_image_load_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dialog_form_image_download"
            app:layout_constraintBottom_toBottomOf="@id/dialog_form_image_download"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/dialog_form_image_load_button"
            android:fontFamily="@font/montserrat"
            app:icon="@drawable/ic_action_download"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dialog_form_image_load_url_inputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/dialog_form_image_load_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:layout_margin="16dp"
            app:startIconDrawable="@drawable/ic_input_image_url"
            style="@style/Theme.Orgs.Text.InputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dialog_form_image_load_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_form_image_load_url_hint"
                android:inputType="textUri"
                android:nextFocusForward="@id/activity_product_form_price"
                style="@style/Theme.Orgs.Text"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>