<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimaryVariant"
            android:elevation="8dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="2dp"
            app:layout_constraintTop_toTopOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="@id/toolbar"
            app:layout_constraintHorizontal_bias="0.0"
            android:foreground="@drawable/ic_action_back"
            android:foregroundGravity="center"
            android:contentDescription="@string/return_button_description" />
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            tools:title="Example"
            android:paddingStart="60dp"
            android:paddingEnd="0dp"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@color/colorOnPrimary"
            android:elevation="4dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:menu="@menu/product_details"
            />
        <!-- region IMAGEVIEW -->
        <ImageView
            android:id="@+id/activity_product_details_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            android:clickable="true"
            android:contentDescription="@string/product_item_image_descr"
            android:scaleType="centerCrop"
            android:background="@color/ic_image_add_background"
            app:srcCompat="@drawable/ic_image_add_foreground"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            />
        <!-- endregion -->
        <!-- region PRICE -->
        <androidx.cardview.widget.CardView
            android:id="@+id/activity_product_details_price_cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_product_details_image"
            app:layout_constraintBottom_toBottomOf="@id/activity_product_details_image"
            app:layout_constraintStart_toStartOf="@id/activity_product_details_image"
            app:layout_constraintEnd_toEndOf="@id/activity_product_details_image"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="25dp"
            android:elevation="10dp"
            >
            <TextView
                android:id="@+id/activity_product_details_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="R$ 50000,00"
                android:background="@color/white"
                android:textColor="@color/colorPrimaryVariant"
                android:textStyle="bold"
                android:textSize="24sp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                />
        </androidx.cardview.widget.CardView>
        <!-- endregion -->
        <!-- region NAME -->
        <TextView
            android:id="@+id/activity_product_details_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_product_details_price_cardView"
            app:layout_constraintBottom_toTopOf="@id/activity_product_details_description"
            app:layout_constraintStart_toStartOf="@id/activity_product_details_image"
            app:layout_constraintEnd_toEndOf="@id/activity_product_details_image"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/gray_darker"
            tools:text="@string/product_name_placeholder"
            />
        <!-- endregion -->
        <!-- region DESCRIPTION -->
        <TextView
            android:id="@+id/activity_product_details_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/activity_product_details_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/activity_product_details_image"
            app:layout_constraintEnd_toEndOf="@id/activity_product_details_image"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="8dp"
            android:textSize="20sp"
            android:textColor="@color/gray"
            tools:text="@tools:sample/lorem/random"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
